Fixed tag overflow in 'More Options' areas. [#213 state:resolved]

--- a/admin/style.css
+++ b/admin/style.css
@@ -837,7 +837,8 @@ button.lite img,
 .more_options p {
     width: 48%;
     margin: 0 2% 0 0;
-    height: 6.25em;
+    min-height: 5.75em;
+    padding: 0 0 .5em;
     float: left;
 }
 .more_options p input.text {
